--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "dependencies": {
     "async": "~0.9.0",
-    "cassandra-driver": "^3.0.0-rc1",
+    "cassandra-driver": "v2.2.2",
     "lodash": "~2.4.0",
     "long": "~2.2.0",
     "through2": "~0.6.3",
